# FunChain

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml  tests.yml
docs/: api_reference.rst  best_practices.rst  chainables.rst  conf.py  getting_started.rst  index.rst  reference.rst  requirements-docs.txt  requirements.txt
docs/_examples/: branching_option_example.py  map_option_example.py  regex_prices__simple_example.py
docs/_source/: conf.py  index.md  index.rst  reference.md
docs/_source/user_guide/: async_support.md  chains.md  getting_started.md  models.md  nested_nodes.md  nodes.md  optional.md  required.md  static.md
docs/_static/: custom.css  theme_script.js
docs/_static/diagrams/: node_types_chain_1.mmd
docs/design_options/: branch_option.rst
docs/examples/: getting_started_fastchain_example.py  people-data.json  regex-component.py  slow_report_handling.py
docs/examples/getting_started/: fastchain_example_1.py  node_types_1.py
docs/source/: chainables.rst  conf.py  getting_started.rst  index.rst  reference.rst
docs/source/_examples/: components.py  group_option_example.py  map_option_example.py  regex_prices_example.py  rounded_square_root_example.py
docs/source/design_options/: branch_option.rst  group_option.rst  index.rst  map_option.rst
docs/user_guide/: async_support.rst  best_practices.rst  bigger_projects.rst  chain_groups.rst  custom_nodes.rst  designing_workflows  designing_workflows.rst  example.ipynb  getting_started.rst  handling_failures.rst  models.rst  node_customization.rst  node_types.ipynb  node_types.rst  reports.rst
docs/user_guide/design_tools/: design_tools_.rst  index.rst
docs/user_guide/designing_workflows/: index.rst  match.rst  model.rst  sequence.rst
fastchain/: __init__.py  _abc.py  _annotations.py  _tools.py  _util.py  chain.py  chainable.py  chainables.py  chains.py  customization.py  elements.py  facto.py  factory.py  monitoring.py  node.py  nodes.py  options.py  reporter.py  test.py  tools.py  wrapper.py
fastchain/chainables/: __init__.py  base.py  collections.py  options.py
fastchain/handlers/: logger.py
fastchain/util/: name.py  names.py  tool.py
fun_chain/: __init__.py  wrapper.py
funchain/: __init__.py  _tools.py  chain.py  core.py  elements.py  facto.py  factory.py  nodes.py  reporter.py  tools.py  utils.py  wrapper.py
funchain/util/: annotation.py
tests/: _test_chain.py  _test_chainables.py  conftest.py  test_chain.py  test_chain_creation_and_access.py  test_chain_creation_and_registration.py  test_chain_functionality.py  test_chain_report.py  test_chainables.py  test_customization.py  test_elements.py  test_factory.py  test_fastchain_nodes.py  test_function_composition.py  test_logging.py  test_meta.py  test_monitoring.py  test_nodes.py  test_parse.py  test_reporter.py  test_tools.py  test_wrapper.py
tests/unit_test/: test_chainables.py  test_factory.py  test_monitoring.py  test_tools.py
tests/unittest/: test_chains.py  test_nodes.py
tests/unittests/: test_chainables.py  test_factory.py
