[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "funchain"
dynamic = ["version"]
description = "Chain functions easily and safely"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
keywords = [
    "function",
    "functional",
    "chain",
    "chaining",
    "pipe",
    "compose",
    "composition",
    "processing",
    "safe",
    "handle",
    "report",
    "failure",
]
authors = [{name =  "MARSO Adnan" , email = "mediadnan@gmail.com"}]
maintainers = [{name =  "MARSO Adnan" , email = "mediadnan@gmail.com"}]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed"
]

[tool.setuptools]
zip-safe = false
package-data = ["py.typed"]
packages = ["funchain"]

[tool.setuptools.dynamic]
version = {attr = "funchain.__version__"}


[project.urls]
repository = "https://github.com/mediadnan/funchain"
documentation = "https://funchain.readthedocs.com"
bugs = "https://github.com/mediadnan/funchain/issues"

[tool.pytest.ini_options]
addopts = "--cov=funchain"
testpaths = [
    "tests"
]

[tool.mypy]
mypy_path = "funchain"
check_untyped_defs = true
