[metadata]
name="funchain"
description = tool for chain functions easily and safely
author = mediadnan
author_email = mediadnan@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Topic :: Utilities
    Typing:: Typed

[options]
package_dir =
    funchain
packages =
    funchain
python_requires = >=3.8
