[metadata]
name = fastchain
version = 1.0.0
description = tool for chain functions easily and safely
long_description = file: README.md
long_description_content_type = text/markdown
keywords = chain, function, pipe, flow, processing
author = mediadnan
maintainer = mediadnan
author_email = mediadnan@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Topic :: Utilities
    Typing :: Typed
url = https://github.com/mediadnan/fastchain
project_urls =
    bug-tracker=https://github.com/mediadnan/fastchain/issues

[options]
zip_safe = False
packages =
    fastchain
python_requires = >=3.8

[options.extras_require]
testing =
    mypy==0.960
    mypy-extensions==0.4.3
    pytest==7.1.2
    pytest-cov==3.0.0

[options.package_data]
fastchain = py.typed

[flake8]
max-line-length = 121